[package]
name = "khronika"
version = "0.1.0"
edition = "2024"

description = "Mutualized log system"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"

repository = "https://github.com/komrad-company/Khronika"

[dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Log management
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"